--- a/app/views/rails_keycloak_authorization/management/index.html.erb
+++ b/app/views/rails_keycloak_authorization/management/index.html.erb
@@ -1,17 +1,5 @@
+<h1>Rails Keycloak Authorization Gem</h1>
 
-<button hx-post="/clicked" hx-swap="outerHTML" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-  Click Me
-</button>
+<ol id="routes-list" hx-get="/rka/routes" hx-trigger="load">
 
-<h1 class="text-3xl font-bold underline text-clifford">Routes</h1>
-
-<% Rails.application.routes.named_routes.names.each do |name| %>
-  <% route = Rails.application.routes.named_routes.get(name) %>
-  <div class="p-2 bg-gray-100 border border-gray-200">
-    <%= route.verb %>
-    <%= name %>
-    <%= route.path.spec.to_s %>
-    <%= route.defaults[:controller] %>
-    <%= route.defaults[:action] %>
-  </div>
-<% end %>
+</ol>
