--- a/app/views/rails_keycloak_authorization/routes/show.html.erb
+++ b/app/views/rails_keycloak_authorization/routes/show.html.erb
@@ -4,6 +4,5 @@
 
 <div>Keycloak Status:</div>
 
-<div hx-get="<%= authz_resource_route_path(route_id: @route.name) %>" hx-trigger="load" ></div>
-
+<div hx-get="<%= resource_path(@route.name) %>" hx-trigger="load" ></div>
 
