--- a/app/views/rails_keycloak_authorization/resources/show.html.erb
+++ b/app/views/rails_keycloak_authorization/resources/show.html.erb
@@ -3,11 +3,15 @@
     <thead>
     <tr>
       <th>Controller</th>
+      <th>Scope</th>
     </tr>
     </thead>
     <tbody>
     <tr>
       <td><%= @keycloak_resource.name %></td>
+      <td>
+        <div hx-get="<%= scopes_path(keycloak_resource_id: @keycloak_resource.id) %>" hx-trigger="load" ></div>
+      </td>
     </tr>
     </tbody>
   </table>
