--- a/app/views/rails_keycloak_authorization/resources/index.html.erb
+++ b/app/views/rails_keycloak_authorization/resources/index.html.erb
@@ -1,1 +1,5 @@
-Resources
+<h1>Resources</h1>
+<% @controller_names.each do |controller_name| %>
+  Rails controller: <%= controller_name %>
+  keycloak resource: <%= controller_name %>
+<% end %>
