--- a/app/views/rails_keycloak_authorization/scopes/index.html.erb
+++ b/app/views/rails_keycloak_authorization/scopes/index.html.erb
@@ -1,1 +1,9 @@
-Scope
+<% @scopes.each do |scope| %>
+  <table>
+    <tbody>
+    <tr>
+      <td><%= scope.name %></td>
+    </tr>
+    </tbody>
+  </table>
+<% end %>
