--- a/app/views/rails_keycloak_authorization/scopes/show.html.erb
+++ b/app/views/rails_keycloak_authorization/scopes/show.html.erb
@@ -3,8 +3,25 @@
     Resource Attached Scope: <%= @resource_scope.name %>
   <% elsif @available_scope %>
     Available Scope to attach: <%= @available_scope.name %>
+
+    <button hx-post="<%= attach_scope_path(@keycloak_scope_name) %>"
+            hx-target="#scope"
+            hx-vals='{
+              "keycloak_scope_name": "<%= @keycloak_scope_name %>",
+              "keycloak_resource_id": "<%= @keycloak_resource_id %>"
+            }'
+    >
+      Attach?
+    </button>
+
   <% else %>
     No scope created yet,
-    <div hx-get="<%= new_scope_path(keycloak_scope_name: @keycloak_scope_name, keycloak_resource_id: @keycloak_resource_id) %>" hx-trigger="load"></div>
+    <button hx-post="<%= scopes_path %>"
+            hx-target="#scope"
+            hx-vals='{
+              "keycloak_scope_name": "<%= @keycloak_scope_name %>",
+              "keycloak_resource_id": "<%= @keycloak_resource_id %>"
+            }'
+    >Create?</button>
   <% end %>
 </div>
