--- a/app/views/rails_keycloak_authorization/resources/new.html.erb
+++ b/app/views/rails_keycloak_authorization/resources/new.html.erb
@@ -1,4 +1,4 @@
 <form hx-post="<%= resources_path %>">
   <input type="text" name="route_id" hidden="hidden" value="<%= @route.defaults[:controller] %>">
-  <button type="Submit">Create Resource?</button>
+  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-3 rounded" type="Submit">Create Resource?</button>
 </form>
