--- a/app/views/rails_keycloak_authorization/permissions/resource_scopes_select.html.erb
+++ b/app/views/rails_keycloak_authorization/permissions/resource_scopes_select.html.erb
@@ -1,3 +1,4 @@
+<label for="keycloak_scope_id">Scope</label>
 <select name="keycloak_scope_id" hx-indicator=".htmx-indicator">
   <option value="" selected disabled>Select Scope</option>
   <% @resource_scopes.map do |scope| %>
