--- a/app/views/layouts/rails_keycloak_authorization/htmx.html.erb
+++ b/app/views/layouts/rails_keycloak_authorization/htmx.html.erb
@@ -4,9 +4,10 @@
   <title>Rails Keycloak Authorization</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <script src="https://unpkg.com/htmx.org@2.0.0/dist/htmx.js" integrity="sha384-Xh+GLLi0SMFPwtHQjT72aPG19QvKB8grnyRbYBNIdHWc2NkCrz65jlU7YrzO6qRp" crossorigin="anonymous"></script>
+  <%= javascript_importmap_tags "application", importmap: RailsKeycloakAuthorization.importmap %>
   <script src="https://cdn.tailwindcss.com"></script>
   <%= stylesheet_link_tag "rails_keycloak_authorization/application", media: "all" %>
+  <script type="module"> import "htmx.org" </script>
 </head>
 <body hx-headers='{"X-CSRF-Token": "<%= form_authenticity_token %>"}'>
   <%= yield %>
